# Rust-Examples

./: .gitignore
Box/: Cargo.toml
Box/src/: lib.rs  main.rs
Closures/: Cargo.toml
Closures/src/: check.rs  main.rs
Generics/: Cargo.toml
Generics/src/: main.rs
Lifetime/: Cargo.toml
Test/: Cargo.toml
Trait/: Cargo.toml
actix/actix-congo/: Cargo.toml
actix/actix-congo/src/: main.rs
actix/actix-congo/src/logs_handlers/: mod.rs
actix/emply/: .env  Cargo.toml  Readme.md
actix/emply/migrations/2020-07-21-023501_create_employees/: up.sql
actix/emply/migrations/2020-07-21-140457_create_teachers/: up.sql
actix/emply/src/: main.rs  schema.rs
actix/emply/src/db/: mod.rs
actix/emply/src/employees/: mod.rs  model.rs  route.rs
actix/emply/src/error_handler/: error_handler.rs  mod.rs
actix/emply/src/teachers/: mod.rs  model.rs  route.rs
actixy/: Cargo.toml
async-await-echo/: Cargo.toml  front.html
async-await-echo/src/: main.rs
asynce/: Cargo.toml
asyncy/: Cargo.toml
averager/: Cargo.toml
blog/: Cargo.toml
channels/: Cargo.toml
collections/: Cargo.toml
crater/: Cargo.toml
enums/: Cargo.toml
errors/: Cargo.toml  hello.txt
guessing_game/: Cargo.toml
hello/: 404.html  Cargo.toml  hello.html
hello_cargo/: Cargo.toml
hello_macro/: Cargo.toml  config.code-workspace
importer1/: Cargo.toml
iterators/: Cargo.toml
micros/: Cargo.toml
minigrep/: Cargo.toml  poem.txt
mutex/: Cargo.toml
oops/: Cargo.toml
overloader/: Cargo.toml
pancakes/: Cargo.toml
pattern/: Cargo.toml
rc/: Cargo.toml
rectangles/: Cargo.toml
restaurant/: Cargo.toml
rfcell/: Cargo.toml
threads/: Cargo.toml
tree/: Cargo.toml
unsafer/: Cargo.toml
variables/: Cargo.toml
(+75 files in other folders)
