[package]
name = "actix-congo"
version = "0.1.0"
authors = ["ritz-786 <ritikraj7255@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0"

bson = "1.0.0"
futures = "0.3.5"
mongodb = "1.0.0"

chrono = "0.4.11"
serde = {version="1.0",features = ["derive"]}