[package]
name = "emply"
version = "0.1.0"
authors = ["ritz-786 <ritikraj7255@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
serde = "1.0"
serde_json = "1.0"
diesel = { version = "1.4.5", features = ["postgres","r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
lazy_static = "1.4"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
dotenv = "0.11"
rust-crypto = "0.2.36"
jsonwebtoken = "7.1.0"
chrono = "0.4.11"